objects/Cadence_Documents__c.object
<CustomObject>
    <description>Upload and Download all cadence objects from this object. This object is primarily used for storing documents</description>
    <fields>
        <fullName>Country__c</fullName>
        <description>field based on region</description>
        <inlineHelpText>Country based on region</inlineHelpText>
        <label>Country</label>
        <picklist>
            <controllingField>Region__c</controllingField>
            <picklistValues>
                <fullName>England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Israel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netherlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sweden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taiwan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Asia-Pacific (excluding Japan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US/Canada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Format_Type__c</fullName>
        <label>Document Format Type</label>
        <picklist>
            <picklistValues>
                <fullName>PDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Name__c</fullName>
        <label>Document Name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>This is a filter field for mapping</description>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global-Noida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Restricted_Profiles__c</fullName>
        <description>It contains Profile Names which are restricted to download the document.</description>
        <label>Restricted Profiles</label>
        <picklist>
            <picklistValues>
                <fullName>2_1 - Inside Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2_1 - Inside SalesClone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2_2 - AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2_2 - AX_Clone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2_3 - Account Directors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2_4 - Regional Sales VPs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2_4 - Regional Sales VPsClone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2_4 AND 5_3 - Regional Sales VPs AND AEs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2_5 - Sales Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2_5 - Sales OperationsClone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2_5 - Sales OperationsCloneApttus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2_6 - AMT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3_1 - Order Fulfillment - Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3_1 - Order Fulfillment - ManagerClone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3_2 - Order Fulfillment - User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3_3 - Order Fulfillment - AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3_3 AND 5_3-Order Fulfillmnet-AP PLUS AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3_4 - Order Management - AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3_5 - Order Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3_6 - Order Management-Index</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4_1 - Sales Finance _Forecast_</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4_2 - WFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4_3 - Sales Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4_4 - Apttus Platform Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4_4 - Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4_4 - LegalApttus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4_4 - LegalApttusClone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4_5 - Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4_6 - Revenue Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4_7 - BP Approvers</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Template_Type__c</fullName>
        <description>Additional filter for document download</description>
        <label>Template Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cadence Software License – SLMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence License for DIP and TIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence Hardware Purchase Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence Hardware Legal Agreement (Quick Cycles Addendum)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence Services Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement: Cadence Consulting Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Quotation Terms and Conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement Form</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Cadence Documents</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Document_Name__c</columns>
        <columns>Document_Format_Type__c</columns>
        <columns>Region__c</columns>
        <columns>Country__c</columns>
        <columns>Template_Type__c</columns>
        <columns>Is_Inactive__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Restricted_Profiles__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_word</fullName>
        <columns>NAME</columns>
        <columns>Document_Name__c</columns>
        <columns>Document_Format_Type__c</columns>
        <columns>Region__c</columns>
        <columns>Country__c</columns>
        <columns>Template_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Restricted_Profiles__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Document_Format_Type__c</field>
            <operation>equals</operation>
            <value>Word</value>
        </filters>
        <label>All word</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AsiaPac_Templates</fullName>
        <columns>NAME</columns>
        <columns>Document_Name__c</columns>
        <columns>Document_Format_Type__c</columns>
        <columns>Template_Type__c</columns>
        <columns>Region__c</columns>
        <columns>Country__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Asia Pacific</value>
        </filters>
        <filters>
            <field>Template_Type__c</field>
            <operation>contains</operation>
            <value>Cadence License for Design IP</value>
        </filters>
        <label>AsiaPac Templates</label>
        <sharedTo>
            <group>Apttus_AsiaPac</group>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_Templates</fullName>
        <columns>NAME</columns>
        <columns>Document_Name__c</columns>
        <columns>Document_Format_Type__c</columns>
        <columns>Template_Type__c</columns>
        <columns>Country__c</columns>
        <columns>Region__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>EMEA</value>
        </filters>
        <label>EMEA Templates</label>
        <sharedTo>
            <group>Apttus_EMEA</group>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>India_SLMA</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Document_Format_Type__c</columns>
        <columns>Document_Name__c</columns>
        <columns>Region__c</columns>
        <columns>Template_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>India</value>
        </filters>
        <label>India Template</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Japan_Templates</fullName>
        <columns>NAME</columns>
        <columns>Document_Name__c</columns>
        <columns>Document_Format_Type__c</columns>
        <columns>Template_Type__c</columns>
        <columns>Region__c</columns>
        <columns>Country__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Japan</value>
        </filters>
        <label>Japan Templates</label>
        <sharedTo>
            <group>Apttus_Japan</group>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NA_Templates</fullName>
        <columns>NAME</columns>
        <columns>Document_Format_Type__c</columns>
        <columns>Document_Name__c</columns>
        <columns>Template_Type__c</columns>
        <columns>Country__c</columns>
        <columns>Region__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Restricted_Profiles__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>North America</value>
        </filters>
        <label>NA Templates</label>
        <sharedTo>
            <group>Apttus_NA</group>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CD-{000000}</displayFormat>
        <label>Cadence Documents Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cadence Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>